[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Enemies/TemplateEnemy/TemplateEnemy.gd" type="Script" id=1]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;
uniform bool turn_red;

void fragment() {
	vec4 color = texture(TEXTURE, UV);
	if (turn_red) {
		COLOR = vec4(1, 0, 0, 1);
	} else {
		COLOR = color;
	}
}"

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/turn_red = null

[node name="TemplateEnemy" type="KinematicBody2D" groups=["Navigators"]]
collision_layer = 2
collision_mask = 10
script = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( -16, -16 )
scale = Vector2( 0.5, 0.5 )
polygon = PoolVector2Array( 64, 0, 64, 64, 0, 34 )

[node name="Polygon2D" type="Polygon2D" parent="."]
material = SubResource( 2 )
position = Vector2( -16, -16 )
scale = Vector2( 0.5, 0.5 )
polygon = PoolVector2Array( 0, 34, 64, 64, 64, 0 )

[node name="Debug" type="Node2D" parent="."]
visible = false

[node name="PathLine2d" type="Line2D" parent="Debug"]
z_index = 3
default_color = Color( 0.101961, 0.894118, 0.0941176, 1 )

[node name="MovementLine2d" type="Line2D" parent="Debug"]
z_index = 4
default_color = Color( 1, 0.4, 0.4, 1 )
